AMBARI-14088 Add GC tuning params to Collector daemon similar to HBase (dsen)